handle +Inf/-Inf in MA plot; fixes #23